--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
     
       <!--header section start -->
-        <div class="header_section fixed-top " id="navbar">
+        <!-- <div class="header_section fixed-top " id="navbar">
             <div class="container-fluid" >
                 <div class="row">
                     <div class="col-md-3 col-sm-4 ">
@@ -69,7 +69,7 @@
                                 <li><a href="about.html" class="mr-5 ml-3">A_PROPOS</a></li>
                                 <li><a href="formations.html " class="mr-5 ml-3">FORMATIONS</a></li>
                                 <li><a href="allumni.html" class="mr-5 ml-3">ALLUMNI</a></li>
-                                <li><a href="contacts.html" class="mr-5 ml-3">CONTACTS</a></li>
+                                <li><a href="contacts.html" class="mr-5 ml-3">CONTACTS</a></li> -->
                                 <!-- <li><a href="gym.html">LOGIN</a></li>
                                 <li><a href="gym.html">REGISTER</a></li>
                                 <li><a href="contact.html">CONTACT US</a></li> -->
