--- a/allumni.html
+++ b/allumni.html
@@ -86,7 +86,7 @@
 
       <section class="section section-lg bg-default text-center section-deroulee pt-5">
 
-        <button id="toggleButton0" data-target="section0" class="button button-lg button-primary button-raven " type="submit"><h2 class="wow fadeIn  bold">2019-2020</h2></button>
+        <button id="toggleButton0" data-target="section0" class="button button-lg button-primary button-raven " type="submit"><h2 class="wow fadeIn text-white  bold">2019-2020</h2></button>
         </section>
         <!-- Allumni -->
         <section id="section0" class="section section-lg bg-default text-center section-deroule pt-5">
@@ -142,7 +142,7 @@
 
         <section class="section section-lg bg-default text-center section-deroulee pt-5">
 
-      <button id="toggleButton1" data-target="section1" class="button button-lg button-primary button-raven " type="submit"><h2 class="wow fadeIn  bold">2021-2022</h2></button>
+      <button id="toggleButton1" data-target="section1" class="button button-lg button-primary button-raven " type="submit"><h2 class="wow fadeIn text-white bold">2021-2022</h2></button>
     </section>
 
 
@@ -196,7 +196,7 @@
 
 <section class="section section-lg bg-default text-center section-deroulee pt-5">
 
-<button id="toggleButton2" data-target="section2" class="button button-lg button-primary button-raven " type="submit"><h2 class="wow fadeIn  bold">2022-2023</h2></button>
+<button id="toggleButton2" data-target="section2" class="button button-lg button-primary button-raven " type="submit"><h2 class="wow fadeIn text-white bold">2022-2023</h2></button>
 </section>
 <!-- Allumni -->
 <section id="section2" class="section section-lg bg-default text-center section-deroule pt-5">
@@ -251,7 +251,7 @@
 
 <section class="section section-lg bg-default text-center section-deroulee pt-5">
 
-  <button id="toggleButton3" data-target="section3" class="button button-lg button-primary button-raven " type="submit"><h2 class="wow fadeIn  bold">2022-2023</h2></button>
+  <button id="toggleButton3" data-target="section3" class="button button-lg button-primary button-raven " type="submit"><h2 class="wow fadeIn text-white bold">2022-2023</h2></button>
   </section>
   <!-- Allumni -->
   <section id="section3" class="section section-lg bg-default text-center section-deroule pt-5">
