--- a/formations.html
+++ b/formations.html
@@ -277,7 +277,7 @@
                 Réseaux et Télécommunications</h3>
               <div class="row row-30">
                 <div class="col-md-6"><img class="img-responsive rounded" src="images/infoform.jpg" alt="" width="340" height="250"/>
-                <button  class="button button-lg button-primary-gradient col-lg-3.5 wow fadeIn"  ><span>VOIR PROGRAMME</span></button>
+                  <a href="#GL" ><button  class="button button-lg button-primary-gradient col-lg-3.5 wow fadeIn"  ><span> PROGRAMME</span></button></a>
               </div>
                 <div class="col-md-6 wow fadeIn">
                   <p class="hei" style="float: right;">
@@ -446,7 +446,7 @@
                 et urbanisme</h3>
               <div class="row row-30">
                 <div class="col-md-6"><img class="img-responsive rounded" src="images/infoform.jpg" alt="" width="340" height="250"/>
-                <button  class="button button-lg button-primary-gradient col-lg-3.5 wow fadeIn"  ><span>VOIR PROGRAMME</span></button>
+                  <a href="#MGL" ><button  class="button button-lg button-primary-gradient col-lg-3.5 wow fadeIn"  ><span> PROGRAMME</span></button></a>
                 </div>
                 <div class="col-md-6 wow fadeIn">
                   <p class="hei" style="float: right;">
@@ -568,22 +568,23 @@
       </div>
     </div>
 
-    <section class="section section-lg bg-default">
+    <section  id="GL" class="section section-lg bg-default">
       <div class="container">
         <h2 class="wow fadeIn vert text-center bold mt-5">PROGRAMMES LICENCE</h2>
         <div class="row row-50">
           <div class="col-lg-6">
             <div class="block-xs">
-              <h2 class="heading-decorate bold">Informatique<br class="d-inline"><span class="divider"></span>et Resaux Telecom</h2>
-              <p class="big text-gray-800">Licence I</p>
+              <h2 class="heading-decorate bold">Genie<br class="d-inline"><span class="divider"></span>Logiciel</h2>
+              <p class="big text-gray-800 ma-bottom">L'Institut Supérieur des Sciences et Technologies (ISST) propose divers programmes d'études au cycle Licence, répartis dans plusieurs filières. Voici un aperçu détaillé des programmes pour la filière mentionné :</p>
+              <p class="big text-gray-800 bold">Licence I</p>
               <p>Semestre I</p>
-              <p>Semestre II</p>
-              <p class="big text-gray-800">Licence II</p>
+              <p class="ma-bottom1">Semestre II</p>
+              <p class="big text-gray-800 bold">Licence II</p>
               <p>Semestre III</p>
-              <p>Semestre IV</p>
-              <p class="big text-gray-800">Licence III</p>
+              <p class="ma-bottom1">Semestre IV</p>
+              <p class="big text-gray-800 bold">Licence III</p>
               <p>Semestre V</p>
-              <p>Semestre VI</p>
+              <p class="ma-bottom1">Semestre VI</p>
               
             </div>
           </div>
@@ -599,23 +600,23 @@
                   <div class="quote-text">
                     <p class="big text-gray-800"><a href="#">Mathematique I</a></p>
                     <p class="">Math121:Analyse mathematique I<a class="espace" href="#">crd:3</a></p>
-                    <p class="">Algebre et geometrie I  <a class="espace" href="#">crd:3</a></p>
-                    <p class="">Mathemetiques discretes <a class="espace" href="#">crd:3</a></p>
+                    <p class="">MATH111:Algebre et geometrie I  <a class="espace" href="#">crd:3</a></p>
+                    <p class="">MATH113:Mathemetiques discretes <a class="espace" href="#">crd:2</a></p>
                     <p class="big text-gray-800"><a href="#">Physique</a></p>
-                    <p class="">Base de l Electrotechnique I  <a class="espace" href="#">crd:3</a></p>
-                    <p class="">Optique Geometrique  <a class="espace" href="#">crd:3</a></p>
-                    <p class="">TP physique <a class="espace" href="#">crd:3</a></p>
+                    <p class="">PHY157:Base de l Electrotechnique I  <a class="espace" href="#">crd:3</a></p>
+                    <p class="">PHY160:Optique Geometrique  <a class="espace" href="#">crd:2</a></p>
+                    <p class="">PHY170:TP physique <a class="espace" href="#">crd:1</a></p>
                     <p class="big text-gray-100"><a href="#">Informatique I</a></p>
-                    <p class="">Environnement et Outils Informatique  <a class="espace" href="#">crd:3</a></p>
-                    <p class="">Algorithmes et programmation  <a class="espace" href="#">crd:3</a></p>
-                    <p class="">TP Mathématique I <a class="espace" href="#">crd:3</a></p>
+                    <p class="">INF101:Environnement et Outils Informatique  <a class="espace" href="#">crd:2</a></p>
+                    <p class="">INF102:Algorithmes et programmation  <a class="espace" href="#">crd:3</a></p>
+                    <p class="">TP Mathématique I <a class="espace" href="#">crd:1</a></p>
                     <p class="big text-gray-100"><a href="#">Electronique</a></p>
-                    <p class="">Circuits logiques 1   <a class="espace" href="#">crd:3</a></p>
-                    <p class="">Technologies multimédia  <a class="espace" href="#">crd:3</a></p>
-                    <p class="">Méthodologie de travail <a class="espace" href="#">crd:3</a></p>
+                    <p class="">GTI101:Circuits logiques 1   <a class="espace" href="#">crd:2</a></p>
+                    <p class="">GTI102:Technologies multimédia  <a class="espace" href="#">crd:2</a></p>
+                    <p class="">GTI101:Méthodologie de travail <a class="espace" href="#">crd:2</a></p>
                     <p class="big text-gray-100"><a href="#">Techniques de Communication I</a></p>
-                    <p class="">Anglais technique I  <a class="espace" href="#">crd:3</a></p>
-                    <p class="">Techniques de Communication I  <a class="espace" href="#">crd:3</a></p>
+                    <p class="">ANG101:Anglais technique I  <a class="espace" href="#">crd:2</a></p>
+                    <p class="">FRA104:Techniques de Communication I  <a class="espace" href="#">crd:2</a></p>
                     <p class="big text-gray-100">Total <a class="espace" href="#">crd:51</a></p>
 
                   </div>
@@ -636,26 +637,25 @@
                 <div class="quote-body">
                   <div class="quote-text">
                     <p class="big text-gray-100"><a href="#">Mathematique II</a></p>
-                    <p class="">Math121:Analyse mathematique II<a class="espace" href="#">crd:3</a></p>
-                    <p class="">Algebre et geometrie II  <a class="espace" href="#">crd:3</a></p>
-                    <p class="">TP Mathématique II <a class="espace" href="#">crd:3</a></p>
+                    <p class="">MATH142:Math121:Analyse mathematique II<a class="espace" href="#">crd:3</a></p>
+                    <p class="">MATH136:Algebre et geometrie II  <a class="espace" href="#">crd:3</a></p>
+                    <p class="">MATH138:TP Mathématique II <a class="espace" href="#">crd:1</a></p>
                     <p class="big text-gray-100"><a href="#">Circuits et Systèmes</a></p>
-                    <p class="">Base de l Electrotechnique II  <a class="espace" href="#">crd:3</a></p>
+                    <p class="">ELEC101:Base de l Electrotechnique II  <a class="espace" href="#">crd:3</a></p>
                     <p class="big text-gray-100"><a href="#">Électronique</a></p>
-                    <p class="">Circuits logiques II  <a class="espace" href="#">crd:3</a></p>
-                    <p class="">Electronique de base <a class="espace" href="#">crd:3</a></p>
-                    <p class="">TP Electronique <a class="espace" href="#">crd:3</a></p>
+                    <p class="">ELEC102:Circuits logiques II  <a class="espace" href="#">crd:2</a></p>
+                    <p class="">ELEC103:Electronique de base <a class="espace" href="#">crd:3</a></p>
+                    <p class="">ELEC104:TP Electronique <a class="espace" href="#">crd:1</a></p>
                     <p class="big text-gray-100"><a href="#">Développement Informatique</a></p>
-                    <p class="">Systèmes d’information I   <a class="espace" href="#">crd:3</a></p>
-                    <p class="">Introduction au développement web  <a class="espace" href="#">crd:3</a></p>
-                    <p class="">Programmation impérative en C/Python <a class="espace" href="#">crd:3</a></p>
+                    <p class="">INF130:Systèmes d’information I   <a class="espace" href="#">crd:2</a></p>
+                    <p class="">INF132:Introduction au développement web  <a class="espace" href="#">crd:2</a></p>
+                    <p class="">INF125:Programmation impérative en C/Python <a class="espace" href="#">crd:2</a></p>
                     <p class="big text-gray-100"><a href="#">Projet Informatique</a></p>
-                    <p class="">Systèmes d’information I   <a class="espace" href="#">crd:3</a></p>
-                    <p class="">Projet informatique  <a class="espace" href="#">crd:3</a></p>
-                    <p class="">Introduction à l’infographie et au design graphique <a class="espace" href="#">crd:3</a></p>
+                    <p class="">GTI103:Projet informatique  <a class="espace" href="#">crd:1</a></p>
+                    <p class="">INF126:Introduction à l’infographie et au design graphique <a class="espace" href="#">crd:3</a></p>
                     <p class="big text-gray-100"><a href="#">Techniques de Communication II</a></p>
-                    <p class="">Anglais technique II  <a class="espace" href="#">crd:3</a></p>
-                    <p class="">Techniques de Communication II  <a class="espace" href="#">crd:3</a></p>
+                    <p class="">ANG104:Anglais technique II  <a class="espace" href="#">crd:2</a></p>
+                    <p class="">FRA102:Techniques de Communication II  <a class="espace" href="#">crd:2</a></p>
                     <p class="big text-gray-100">Total <a class="espace" href="#">crd:30</a></p>
 
                   </div>
@@ -689,7 +689,7 @@
                     <p class="">Inf203:Structures de données et Algorithmes <a class="espace" href="#">crd:3</a></p>
                     <p class="">Inf209:Systèmes  d'information 2 <a class="espace" href="#">crd:2</a></p>
                     <p class="big text-gray-100"><a href="#">Réseaux et Système d'Exploitation</a></p>
-                    <p class="">Tel207:Communications analogiques et circuits de télécommunications   <a class="espace" href="#">crd:2</a></p>
+                    <p class="">Tel207:Communications analogiques et circuits de tél.  <a class="espace" href="#">crd:2</a></p>
                     <p class="">Inf225:Systèmes d'exploitation  <a class="espace" href="#">crd:2</a></p>
                     <p class="">Res201:Introduction aux Réseaux informatiques <a class="espace" href="#">crd:1</a></p>
                     <p class="">Res203:Réseaux téléphoniques IP et mobiles <a class="espace" href="#">crd:2</a></p>
@@ -797,7 +797,7 @@
                     <p class="">ECO304:Droit et régulation des TIC  <a class="espace" href="#">crd:2</a></p>
                     <p class="">GES308:Economie et gestion  <a class="espace" href="#">crd:2</a></p>
                     <p class="big text-gray-100"><a href="#">Réseaux et sécurité</a></p>
-                    <p class="">RES324:Sécurité des logiciels, des systèmes d’information et des réseaux <a class="espace" href="#">crd:3</a></p>
+                    <p class="">RES324:Sécurité des logiciels, des systèmes d’inf. et des réseaux <a class="espace" href="#">crd:3</a></p>
                     <p class="">RES306:Administration et supervision réseau <a class="espace" href="#">crd:2</a></p>
                     <p class="big text-gray-100"><a href="#">Projets intégrateurs</a></p>
                     <p class="">PRO302:Projet tutoré<a class="espace" href="#">crd:3</a></p>
@@ -830,22 +830,20 @@
 
 
 
-    <section class="section section-lg bg-default">
+    <section id="MGL" class="section  section-lg bg-default">
       <div class="container">
         <h2 class="wow fadeIn vert text-center bold mt-5">PROGRAMMES MASTER</h2>
         <div class="row row-50">
           <div class="col-lg-6">
             <div class="block-xs">
-              <h2 class="heading-decorate bold">Informatique<br class="d-inline"><span class="divider"></span>et Resaux Telecom</h2>
-              <p class="big text-gray-800">Licence I</p>
-              <p>Semestre I</p>
-              <p>Semestre II</p>
-              <p class="big text-gray-800">Licence II</p>
-              <p>Semestre III</p>
-              <p>Semestre IV</p>
-              <p class="big text-gray-800">Licence III</p>
-              <p>Semestre V</p>
-              <p>Semestre VI</p>
+              <h2 class="heading-decorate bold">Genie<br class="d-inline"><span class="divider"></span>Logiciel</h2>
+              <p class="big text-gray-800 ma-bottom">L'Institut Supérieur des Sciences et Technologies (ISST) propose divers programmes d'études au cycle Master, répartis dans plusieurs filières. Voici un aperçu détaillé des programmes pour la filière mentionné :</p>
+              <p class="big text-gray-800 bold">Master I</p>
+              <p>Semestre VII</p>
+              <p class="ma-bottom1">Semestre VIII</p>
+              <p class="big text-gray-800 bold">Master II</p>
+              <p>Semestre IX</p>
+              <p class="ma-bottom1">Semestre X</p>
               
             </div>
           </div>
