--- a/about.html
+++ b/about.html
@@ -148,7 +148,7 @@
             <div class="col-sm-6 col-lg-4 col-xl-3 wow fadeIn" data-wow-delay=".6s">
               <!-- Box Classic-->
               <article class="box-classic"><a class="icon box-classic-icon mdi mdi-resistor icon" href="formations.html#filiere5"></a><a class="box-classic-main" href="formations.html#filiere5">
-                  <h4 class="box-classic-title vert">Electrotechnique</h4>
+                  <h4 class="box-classic-title vert">Genie electrique</h4>
                   <div class="box-classic-inner">
                     <p>Maitriser les competences en Electrotechnique a ISST</p>
                   </div></a></article>
