--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Work+Sans:300,400,500,700%7CZilla+Slab:300,400,500,700,700i%7CGloria+Hallelujah">
     <!-- <link rel="stylesheet" href="css/bootstrap.css"> -->
     <link rel="stylesheet" href="css/fonts.css">
-    <link rel="stylesheet" href="css/fontss.css">
+    <!-- <link rel="stylesheet" href="css/fontss.css"> -->
     <link rel="stylesheet" href="css/style6.css">
     <!-- <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script> -->
     
